Fixed spacing around center actions

--- a/ui/client-react/src/components/trowser/trowser.scss
+++ b/ui/client-react/src/components/trowser/trowser.scss
@@ -77,10 +77,18 @@ $action-separator-color: #486c8f;
             justify-content:center;
             align-items:center;
             a {
-                padding:0 10px;
-                border-left:1px solid $action-separator-color;
+                display: flex;
+                height: 23px;
+                line-height: 23px;
+                padding: 0 30px;
                 color: #fff;
+                border-left: 1px solid $action-separator-color;
                 text-decoration:none;
+                align-items: center;
+                .qbIcon {
+                    font-size: 16px;
+                    margin-right: 10px;
+                }
             }
             a:last-child {
                 border-right:1px solid $action-separator-color;
@@ -134,8 +142,9 @@ $action-separator-color: #486c8f;
 
         .centerActions {
             a {
-                flex: 1 1 auto;
-                text-align:center;
+                flex: 1;
+                align-items: center;
+                justify-content: center;
             }
             a:first-child {
                 border-left:0;
